--- a/lib_pro_sample/lodash/index.html
+++ b/lib_pro_sample/lodash/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>function</title>
+    <title>Document</title>
 </head>
 <body>
-    
-    <!-- <div id="root"></div> -->
-    <h1 id="kiii">click me</h1>
-    <script src="./advance.js"></script>
-    
+    <h1 id="heading"></h1>
+    <script src="../../libs/js/lodash.min.js"></script>
+    <script src="../lodash/src/script.js"></script>
 </body>
 </html>
